<resources>
    <string name="app_name">SportNet</string>

    <string name="username">Username</string>
    <string name="username_content">Username can only contain letters and numbers (a–z, A–Z, 0–9)</string>
    <string name="username_length_long">Username cannot be longer then 20 symbols</string>
    <string name="username_length_short">Username cannot be shorter than 6 symbols</string>
    <string name="username_enter">Please, enter your username</string>
    <string name="username_existence">This username has existed</string>

    <string name="email">Email</string>
    <string name="email_enter">Please, enter your email</string>
    <string name="email_wrong">There is no such email </string>
    <string name="email_badly_formatted">The email address is badly formatted. </string>


    <string name="password">Password</string>
    <string name="password_enter">Please, enter your password</string>
    <string name="password_length">Your password cannot be shorter than 6 symbols</string>
    <string name="password_wrong">Password is wrong</string>

    <string name="username_availability">There is no account with such username</string>

    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_enter">Please, confirm your password</string>
    <string name="confirm_password_matching">Does not match with your password</string>

    <string name="task_error_username">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="task_error_password">The password is invalid or the user does not have a password.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload image</string>
    <string name="_12_12_1222">12/12/1222</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="logo">Logo</string>
    <string name="suggest_to_login">Already have an account? Log in!</string>
    <string name="suggest_to_sign_up">Don\'t have an account? Sign up!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="app_logo">APP LOGO</string>
    <string name="launch_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="my_profile">My profile</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="top_charts">Top charts</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="button">Button</string>
    <string name="chats">Chats</string>
    <string name="top_10">Top-10</string>
    <string name="me">Me</string>
    <string name="new_password">New password</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="avatar">avatar</string>
    <string name="save">save</string>
    <string name="save_changes">save changes</string>


    <string name="choose_sport">Choose skill</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="kg">kg</string>
    <string name="heightWithDots">Height:</string>
    <string name="weightWithDots">Weight:</string>
    <string name="m">m</string>
    <string name="add_your_birth_date">Add your Birth Date</string>
    <string name="gender">Gender:</string>
    <string name="select_your_skills">Select your Skills</string>
    <string name="_00_0">00.0</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_skills">Add Skills</string>
    <string name="current_location">Current Location</string>

    <string name="google_maps_key">AIzaSyBFsdF95CqchO5MOAabdmXK-UAJvYYGNE0</string>


    <string-array name="sports_array">
        <item>Choose Sport…</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Workout</item>
        <item>Swimming</item>
    </string-array>
    <string-array name="task_array">
        <item>&#160;&#160;•&#160;&#160;Loose Weight</item>
        <item>&#160;&#160;•&#160;&#160;Develop Stamina</item>
        <item>&#160;&#160;•&#160;&#160;Build Muscles</item>
    </string-array>
    <string name="country_prompt">Choose your aim according which will be made today\'s training program.</string>
    <string-array name="workout_array">
        <item>Choose Skill…</item>
        <item>Pull-Ups</item>
        <item>Push-Ups</item>
        <item>Parallel Dips</item>
        <item>Human Flag</item>
        <item>Planche</item>
        <item>Front Lever</item>
        <item>Back Lever</item>
        <item>Elbow Lever</item>
    </string-array>

    <string-array name="football_array">
        <item>Choose Skill…</item>
        <!--<item>Juggling</item>-->
        <!--<item>ATM</item>-->
        <!--<item>Akka</item>-->
    </string-array>

    <string name="Camera">Camera</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_height">Your Height</string>
    <string name="delete_event">Delete Event</string>
    <string name="going">Going</string>
    <string name="cancel">Cancel</string>
    <string name="no_participants_yet">No Participants Yet!</string>
    <string name="creator">Creator</string>
    <string name="participants"><u>Participants</u></string>
    <string name="squats">Squats</string>
    <string name="sit_ups">Sit-Ups</string>
    <string name="excersice_name">Excersice Name</string>
    <string name="lay_prone_on_the_ground_with_arms_supporting_your_body_keep_your_body_straight_while_raising_and_lowering_your_body_with_your_arms">Lay prone on the ground with arms supporting your body. Keep your body straight while raising and lowering your body with your arms.</string>
    <string name="_1st_set">1st set</string>
    <string name="_2nd_set">2nd set</string>
    <string name="_3rd_set">3rd set</string>
    <string name="_4th_set">4th set</string>
    <string name="rest">Rest</string>
    <string name="stop">Stop</string>
    <string name="_2_30">2:30</string>
    <string name="_12">12</string>
    <string name="location">========== Location ==========</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="create_event">Create event</string>
    <string name="ok">OK</string>
    <string name="well_done">Well Done!!!</string>
    <string name="exit">Exit</string>
    <string name="loose_weight">Loose Weight</string>
    <string name="_0_calories_burned">• 0 calories burned</string>
    <string name="_2_km_to_destination">• 2 km to destination</string>
    <string name="points">points:</string>
    <string name="Points">points</string>
    <string name="beginner">beginner</string>
    <string name="click_edit_button_to_add_information_about_you">Click EDIT button to add information about you</string>
    <string name="weight_space">Weight:</string>
    <string name="height_space">Height:</string>
    <string name="all_photos"><u>All photos</u></string>

    <string name="user_info">User info</string>
    <string name="full_name">Full Name:</string>

    <string name="age">Age:</string>
    <string name="your_age">Your Age</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="skills">Skills</string>
    <string name="no_photos_yet">No photos yet.</string>
    <string name="you_don_t_have_photos_yet">You don\'t have photos yet</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="notifications">Notifications</string>
    <string name="map_zoom_buttons">Map Zoom Buttons</string>
    <string name="hide_user_info">Hide User Info</string>
    <string name="change_app_font_size">Change App Font Size</string>
    <string name="change_app_language">Change App Language</string>
    <string name="delete_account">Delete Account</string>
    <string name="rich_red_marker_and_you_will_burn_110_calories_do_this_task_every_day_and_in_a_month_you_will_loose_1kg">Rich red marker and you will burn 110 calories! Do this task every day and in a month you will loose 1kg!</string>
    <string name="build_muscles">Build Muscles</string>
    <string name="choose_your_aim">Choose your aim</string>
    <string name="based_on_your_choice_will_be_made_training_program">Based on your choice will be made training program</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="juggling">Juggling</string>
    <string name="parallel_dips">Parallel Dips</string>
    <string name="push_ups">Push-Ups</string>
    <string name="pull_ups">Pull-Ups</string>
    <string name="news">News</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="violet">Violet</string>
    <string name="push_ups_description">Lay prone on the ground with arms supporting your body.  Keep your body straight while raising and lowering your body with your arms.</string>
    <string name="pull_ups_description">Grab the pullup bar with your palms down. Hang to the pullup-bar with straight arms and your legs off the floor. Pull yourself up by pulling your elbows down to the floor. Go all the way up until your chin passes the be bar.Lower yourself until your arms are straight.</string>
    <string name="squats_description">Stand with your feet shoulder width apart and your arms stretched forward, then lower your body until your thighs are parallel with the floor. Your knees should be extended in the same direction as your toes. Return to the start position and do the next rep.</string>
    <string name="sit_ups_description">Lie on your back with your hands behind your ears. Then lift your upper body off the floor and slowly up to the sitting position. Don\'t tug your neck when you get up. Slowly go back to the start position and repeat the exercise.</string>
    <string name="_13_40_apr_7">13:40, Apr 7</string>
    <string name="minus_sign">-</string>
    <string name="photo">photo</string>
    <string name="news_image">news image</string>
    <string name="shadow">shadow</string>
    <string name="_31_dec_2019">31 Dec 2019</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="time">time</string>
    <string name="two_dots_sign">:</string>
    <string name="message_image">message image</string>
    <string name="updated">Updated</string>
    <string name="edit">edit</string>
    <string name="sport_net">Sport Net</string>
    <string name="remove">remove</string>
    <string name="image_gallery">image gallery</string>
    <string name="app_description">This app is for people who wants to take part in sport events, have healthy body, share skills and much more other things. Log in and have good time!</string>
    <string name="finished">Finished</string>
    <string name="enter_address_city">Enter Address, City</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you sure you want to delete this event</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_name">Event name</string>
    <string name="field_must_be_filled">Field must be filled</string>
    <string name="please_choose_date">Please choose date and time</string>
    <string name="edit_event">Edit event</string>
    <string name="view_photos"><u>View photos</u></string>


</resources>
