<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/my_profile_fragment"
        android:icon="@drawable/ic_account_circle_white"
        android:title="@string/me" />
    <item
        android:id="@+id/news_fragment"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/news" />
    <item
        android:id="@+id/map_fragment"
        android:icon="@drawable/ic_location"
        android:title="@string/map" />
    <item
        android:id="@+id/top_charts_fragment"
        android:icon="@drawable/ic_trophy_white"
        android:title="@string/top_10"
        />
    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/settings"
        />

</menu>