<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_button"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <ImageView
            android:id="@+id/iv_avatar_chart"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_username_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar_chart"
            app:layout_constraintEnd_toStartOf="@id/tv_dots_chart"
            app:layout_constraintStart_toEndOf="@id/iv_avatar_chart"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar_chart" />


        <TextView
            android:id="@+id/tv_dots_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_dots_sign"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="@dimen/my_profile_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username_chart"
            app:layout_constraintStart_toEndOf="@+id/tv_username_chart"
            app:layout_constraintTop_toTopOf="@+id/tv_username_chart" />

        <TextView
            android:id="@+id/tv_skill_count_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/_12"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username_chart"
            app:layout_constraintStart_toEndOf="@+id/tv_dots_chart"
            app:layout_constraintTop_toTopOf="@+id/tv_username_chart" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>